tdf#162342: workaround out-of-order context stack pop

Turns out, the context stack is populated in one order, but emptied in
another. Commit e63a75e00dcd797b0bd061add3c72dcb7b353007 (tdf#158586
writerfilter: RTF import: fix \page \sect \skbnone, 2024-02-01) added
yet another case, which resulted in m_pTopContext being empty at the
moment when section properties should have been applied (see "needed
for page properties" comment in DomainMapper::sprmWithProps; that code
wasn't reached because of (!rContext) check above).

But that isn't the only case; I tried to assert in non-RTF cases, and
it fired in `make check`, too.

So here is an UGLY HACK. I repair the stack when it's popped out of
order. This pleads for a proper fix, but the effort will be far from
trivial.

Change-Id: I1a5c646188f3da4842d103b8edeb11b801fea830
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/188449
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>